# mqtt_odoo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
.devcontainer/: .env.sample  Dockerfile  Dockerfile.mosquitto  devcontainer.json  docker-compose.yml
.github/workflows/: build-contianer.yml
scripts/: prep_workspace.sh
src/mqtt_odoo_proxy/: __init__.py  __main__.py  api.py  cli.py  models.py  mqtt_thread.py  odoo.py
src/mqtt_odoo_proxy/routers/: clients.py  subscriptions.py
